Fusion-Qa-Final/src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <label>Bill To Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bill_To_Number__c</fullName>
        <label>Bill To Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Hold_Status__c</fullName>
        <label>Credit Hold Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <formula>SAP_Customer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Downgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Downgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EP_Order_Type__c</fullName>
        <label>EP Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Free Part</fullName>
                </value>
                <value>
                    <fullName>RMA Replacement</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FOB__c</fullName>
        <label>FOB</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Total__c</fullName>
        <label>Line Total</label>
        <summarizedField>Order_Line__c.Ext_Price__c</summarizedField>
        <summaryForeignKey>Order_Line__c.Order_Details__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Misc__c</fullName>
        <label>Misc</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Need_By_Date__c</fullName>
        <label>Req. Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Old Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Line_Total__c</fullName>
        <label>Open Line Total</label>
        <summarizedField>Order_Line__c.Ext_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Order_Line__c.Line_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Line__c.Order_Details__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Line_Unit_Total__c</fullName>
        <label>Open Line Unit Total</label>
        <summarizedField>Order_Line__c.Order_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Order_Line__c.Line_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Line__c.Order_Details__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Comment__c</fullName>
        <label>Order Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Held__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Held</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Source__c</fullName>
        <label>Order Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Subtotal__c</fullName>
        <label>Order Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseOrder__c</fullName>
        <label>PurchaseOrder</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Number__c</fullName>
        <label>RMA Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_Number__c</fullName>
        <label>SAP Customer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_By__c</fullName>
        <label>Ship By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ship Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_To_Number__c</fullName>
        <label>Ship To Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_Via__c</fullName>
        <label>Ship Via</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Amount__c</fullName>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sold_To_Number__c</fullName>
        <label>Sold To Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Sold To)</relationshipLabel>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade_Charge__c</fullName>
        <label>Upgrade Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Order_Type__c</columns>
        <columns>NAME</columns>
        <columns>Bill_To__c</columns>
        <columns>Ship_To__c</columns>
        <columns>Sold_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Order_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Orders</fullName>
        <columns>NAME</columns>
        <columns>PurchaseOrder__c</columns>
        <columns>Need_By_Date__c</columns>
        <columns>Order_Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <listViews>
        <fullName>Closed_Orders</fullName>
        <columns>NAME</columns>
        <columns>PurchaseOrder__c</columns>
        <columns>Need_By_Date__c</columns>
        <columns>Order_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Completely Processed</value>
        </filters>
        <label>Shipped Orders</label>
    </listViews>
    <listViews>
        <fullName>My_Orders</fullName>
        <columns>NAME</columns>
        <columns>PurchaseOrder__c</columns>
        <columns>Need_By_Date__c</columns>
        <columns>Order_Status__c</columns>
        <columns>Order_Total__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Orders</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Orders</fullName>
        <columns>NAME</columns>
        <columns>PurchaseOrder__c</columns>
        <columns>Need_By_Date__c</columns>
        <columns>Order_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Status__c</field>
            <operation>notEqual</operation>
            <value>Completely Processed</value>
        </filters>
        <label>Open Orders</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_Orders</fullName>
        <columns>NAME</columns>
        <columns>PurchaseOrder__c</columns>
        <columns>Need_By_Date__c</columns>
        <columns>Order_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled,Closed,Completely Processed</value>
        </filters>
        <label>Upcoming Orders</label>
    </listViews>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>